Version 1.1.0.
* Update dependent libraries.
* Add as expression checkbox for note.
* Modify ddl when note is checked as expression.

---

__(notice)__

If using under v1.0.7, please update to 1.1.0 below orders.
Because local database definition is changed .

1. Update to 1.1.0.
2. Write out json.
3. Read from json.